--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=
+spring.datasource.username= 
+spring.datasource.password=
 
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
+spring.jpa.hibernate.ddl-auto= validate
