--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 spring.jpa.hibernate.ddl-auto= validate
+
+token.secret.key=
+token.expirationms=
